test/variable/undefined_local.lox
{
  print notDefined  // error: undeclared variable 'notDefined'
}
